nqc/src/ast/snapshots/nqc__ast__test__error_snapshot_tests@int_fn.nqc.snap
---
source: nqc/src/ast/mod.rs
expression: "format!(\"{err:?}\")"
input_file: nqc/tests/bad/int_fn.nqc
---
  × error
   ╭────
 1 │ int fn() {}
   ·     ─┬
   ·      ╰── Syntax error: only void functions are supported
   ╰────
